# Ecdar-API

./: .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  build_artifacts.yml  check_format.yml  test.yml
api_server/: Cargo.toml
api_server/src/: main.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/contexts/: DatabaseContext.rs  EntityContext.rs  UserContext.rs  mod.rs
ecdar_api_macros/: Cargo.toml
ecdar_api_macros/src/: lib.rs
entities/: Cargo.toml
entities/src/entities/: access.rs  mod.rs  session.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231012_094213_create_user_table.rs  m20231012_094228_create_model_table.rs  m20231012_094228_create_project_table.rs  m20231012_094242_create_query_table.rs  m20231012_094303_create_in_use_table.rs  m20231012_094422_create_session_table.rs  m20231012_094533_create_access_table.rs  m20231012_122243_create_role_type.rs  m20231111_205633_create_role_table.rs  main.rs
migration/src/entities/: access.rs  in_use.rs  mod.rs  model.rs  prelude.rs  query.rs  role.rs  session.rs  user.rs
src/: build.rs  lib.rs  main.rs
src/api/: auth.rs  context_collection.rs  ecdar_api.rs  hashing_context.rs  logic_collection.rs  mod.rs  reveaal_context.rs  server.rs
src/api/collections/: context_collection.rs  controller_collection.rs  logic_collection.rs  mod.rs
src/api/logic_impls/: access_logic.rs  mod.rs  project_logic.rs  query_logic.rs  session_logic.rs  user_logic.rs
src/api/logic_traits/: mod.rs  project_logic_trait.rs  query_logic_trait.rs  session_logic_trait.rs  user_logic_trait.rs
src/api_server/: auth.rs  ecdar_api.rs  mod.rs  server.rs
src/contexts/: access_context.rs  context_collection.rs  entity_context_trait.rs  in_use_context.rs  mod.rs  project_context.rs  query_context.rs  session_context.rs  user_context.rs
src/contexts/context_impls/: access_context.rs  in_use_context.rs  postgres_database_context.rs  project_context.rs  query_context.rs  session_context.rs  sqlite_database_context.rs  user_context.rs
src/contexts/context_traits/: access_context_trait.rs  database_context_trait.rs  entity_context_trait.rs  in_use_context_trait.rs  mod.rs  project_context_trait.rs  query_context_trait.rs  session_context_trait.rs  user_context_trait.rs
src/contexts/db_centexts/: mod.rs  postgres_context.rs  postgres_database_context.rs  sqlite_context.rs  sqlite_database_context.rs
src/controllers/: access_controller.rs  controller_collection.rs  mod.rs  project_controller.rs  query_controller.rs  reveaal_controller.rs  session_controller.rs  user_controller.rs
src/controllers/controller_impls/: access_controller.rs  mod.rs  project_controller.rs  query_controller.rs  reveaal_controller.rs  session_controller.rs  user_controller.rs
src/controllers/controller_traits/: access_controller_trait.rs  mod.rs  project_controller_trait.rs  query_controller_trait.rs  session_controller_trait.rs  (+1 more)
src/database/: access_context.rs  database_context.rs  entity_context.rs  in_use_context.rs  mod.rs  model_context.rs  project_context.rs  query_context.rs  session_context.rs  user_context.rs
src/entities/: access.rs  in_use.rs  mod.rs  model.rs  prelude.rs  project.rs  query.rs  role.rs  sea_orm_active_enums.rs  session.rs  user.rs
src/logics/: mod.rs
src/services/: hashing_service.rs  mod.rs  reveaal_service.rs  service_collection.rs
src/tests/: mod.rs
(+74 files in other folders)
