[package]
name = "api_server"
version = "0.0.1"
edition = "2021"

[dependencies]
migration = { path = "migration" }
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "^0.12.0", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros","tests-cfg","sqlx-sqlite" ] }
async-trait = { version = "0.1.73", features = [] }
futures = "0.3.28"
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"] }


