[package]
name = "ecdar_api"
version = "0.0.1"
build = "src/build.rs"
edition = "2021"
authors = [
    'Alexander Manich',
    'Ali Khorami',
    'Anders Sørensen',
    'Emil Laursen',
    'Mads Risager',
    'Mike Jensen',
    'Mikkel Jensen',
    'Rasmus Nielsen',
    'Simon Bejer',
    'Thorbjørn Møller',
    'Viktor Platz',
    'William Woldum'
]

[lib]
name = "ecdar_api"
proc-macro = true

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
sea-orm = { version = "^0.12.0", features = ["sqlx-postgres", "runtime-async-std-native-tls", "macros", "tests-cfg", "sqlx-sqlite"] }
async-trait = { version = "0.1.73", features = [] }
futures = "0.3.28"
tonic = "0.11.0"
prost = "0.12.1"
log = "0.4.20"
jsonwebtoken = "9.1.0"
serde = "1.0.189"
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"] }
regex = "1.10.2"
mockall = "0.12.1"
bcrypt = "0.15.0"
serde_json = "1.0.108"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
convert_case = "0.6.0"
migration = { path = "migration" }
thiserror = "1.0.50"

[build-dependencies]
tonic-build = "0.11.0"

[lints.clippy]
complexity = "deny"
correctness = "deny"
perf = "deny"
suspicious = "warn"
enum_variant_names = "allow"
